--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_6283f58698b8fd000a717540">var s=document.createElement("script");s.src="https://scripts.converteai.net/1deaa345-7cc5-4def-80e7-82082667f73f/players/6283f58698b8fd000a717540/player.js",s.async=!0,document.head.appendChild(s);</script>
-
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/8yj82EU" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/msDrj7U" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
